<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
     android:orientation="vertical"
    android:layout_gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/welcome"
                android:textColor="@color/dark_slate"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/tsf"
                android:textColor="@color/dark_slate"
                android:textSize="20sp" />

            <Button
                android:id="@+id/fb_Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/btn_cutomise"
                android:drawableLeft="@drawable/facebook"
                android:drawablePadding="10dp"
                android:padding="5dp"
                android:text="@string/login_facebook"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:backgroundTint="#E1253EE3" />

            <Button
                android:id="@+id/google_Signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/btn_cutomise"
                android:drawableLeft="@drawable/google"
                android:text="@string/signin_google"
                android:textColor="@color/black"
                android:textColorHighlight="#FFFFFF"
                android:textSize="15sp"
                app:backgroundTint="@color/platinum" />

            <TextView
                android:id="@+id/hyper_Link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/hyper_link"
                android:textColor="#2C2424"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/copy_right"
                android:textColor="#716868" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>